--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
+          <h2>Correlations Discovered Between Health Risks and Income</h2>
           <p>There is a small correlation between income and whether a household is smoking.  Lower income households have more smokers than higher income households.</p>
         </div>
       </div>
